--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+        <figure>
+            <img src="img/1.jpg" alt="">
+        </figure>
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
